--- a/platformio/TODO.txt
+++ b/platformio/TODO.txt
@@ -1,11 +1,9 @@
 
-* Switch to LVGL 8, when released.
+* Switch to Pico SDK 1.2.x
+
+* Switch to LVGL 8.
 
 * In the oscilloscope and phase charts, make the major division lines thicker. (Requires LVGL 8).
-
-* Add driver for MK3.
-
-* In settings screen, show hardware version.
 
 
 ============= DONE
