--- a/kicad/TODO.txt
+++ b/kicad/TODO.txt
@@ -1,6 +1,6 @@
 
 
-
+* Update the PICO footprint per the official specification. (e.g. pads under the USB connector).
 * Delete junk kicad and model files.
 
 * Replace backlight mosfet with NPN (e.g. SS8050) and a resistor (reduce cost).
