--- a/platformio/TODO.txt
+++ b/platformio/TODO.txt
@@ -1,8 +1,5 @@
 
-
-
-* Change the timing of the steps and retraction screens such as the value are captured by the ADC IRQ. Should 
-avoid distortions if the screen update is too slow.
+* Change the speed dial screen to use the hard time screen capture. Currently frame rate based.
 
 * Switch to Pico SDK 1.2.x
 
@@ -11,13 +8,16 @@ avoid distortions if the screen update is too slow.
 
 ============= DONE
 
+* Change the timing of the steps and retraction screens such as the value are captured by the ADC IRQ. Should 
+avoid distortions if the screen update is too slow.
+
 * In the home page, call the coils A, B, not 1, 2.
 
 * Consider to set WR_HL in the first gpio color table. //Didn't work. Insufficient hold time.
 
 * Increase tft driver render loop inline to 20 pixels (currently 8)
 
-* Increase chart horizontal resolution (and update rate). Display resoluion is 400 pixels.
+* Increase chart horizontal resolution (and update rate). Display resolution is 400 pixels.
 
 * Consider to double the update rate of the steps and retraction charts to have
 a more smooth graph animation.
