Added a Kicad TODO

--- a/kicad/TODO.txt
+++ b/kicad/TODO.txt
@@ -1,4 +1,6 @@
 
+* Add a connection to the TFT's RD input to allow reading. Make it PIO friendly (e.g. WR and RD can be a 2 pin 'side output')
+
 * Move FPC1 1mm toward the cable 
 
 * Add filter capacitor for ACS712ELCTR-05B-T current sensor.
@@ -7,15 +9,12 @@
 
 * Delete junk kicad and model files.
 
-* Replace backlight mosfet with NPN (e.g. SS8050) and a resistor (reduce cost).
-
 * Run the backlight on VSYS and allow for higher max current since backlight is PWM controlled.
 
 
-
-
-
 ----- Done
+
+* REJECTED. (low Hfe concerns) Replace backlight mosfet with NPN (e.g. SS8050) and a resistor (reduce cost).
 
 * Replace 10u tantalum with ceramic (cost)
 
